# eidolon

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  PRD.md  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/workflows/: verify.yml
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
docs/: BLUEPRINT-V0.1.md  BUILD-PLAN-V0.1.md  api.md  concepts.md  constitution.md  decision-forks.md  release-v0.1-checklist.md  templates.md
docs/adr/: 0001-fork-from-homelab-blueprint.md  0002-no-anthropic-api-runtime.md  0004-litellm-hybrid-router.md  0006-claude-code-subagents.md  0007-fork-cai-patterns.md  0008-control-plane-only-byo-vm.md
docs/architecture/: agent-orchestration.md  gpu-strategy.md  overview.md  provider-router.md  threat-model.md  vm-roles.md
docs/diagrams/: agent-orchestration.d2  architecture-overview.d2  provider-router.d2  session-lifecycle.d2
docs/future/: paperclip-orchestrator.md
docs/presentations/: defcon-toronto-2026-demo-plan.md  defcon-toronto-2026-outline.md
docs/runbooks/: add-vm.md  dogfood-ad.md  dogfood-web-app.md
docs/specs/001-scope-token-end-to-end/: plan.md  spec.md  tasks.md
docs/specs/002-engagement-lifecycle-cli/: plan.md  spec.md  tasks.md
docs/specs/003-three-tier-command-gate/: plan.md  spec.md  tasks.md
docs/specs/004-audit-log-hash-chain/: plan.md  spec.md  tasks.md
docs/specs/005-llm-router-redaction/: plan.md  spec.md  tasks.md
eidolon/: __init__.py
eidolon/cli/: __init__.py  main.py  skills_install.py
eidolon/mcp_servers/: __init__.py  _rest.py  context.py  server.py
eidolon/mcp_servers/tools/: __init__.py  engagements.py  forks.py  secrets.py  templates.py  workspace.py
eidolon/orchestrator/agents/: README.md  recon-agent.md  report-agent.md
eidolon/orchestrator/app/: __init__.py  dependencies.py  main.py
eidolon/orchestrator/lib/: __init__.py  audit.py  auth.py  config.py  db.py  dispatches.py  engagements.py  forks.py  provisioner.py  revocation.py  scope.py  secrets.py  templates.py  vm_agents.py  (+1 more)
eidolon/vm_agent/: main.py
tests/: conftest.py  test_audit_chain.py  test_audit_cli.py  test_auth.py  test_cli_fork_workspace.py  test_engagement_cli.py  test_engagement_erase.py  test_forks.py  test_mcp_server.py  test_persistence.py  test_provisioner.py  test_scope_token.py  test_secrets.py  test_skills_install.py  test_smoke.py  test_substrate_base.py  test_substrate_docker.py  test_substrate_proxmox.py  test_templates.py  test_vm_agents.py  test_workspace.py
(+32 files in other folders)
